--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,7 +16,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-   TASKDEV:
+   DEV:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: DEV
@@ -38,7 +38,7 @@ jobs:
 
 
 
-   TASKQA:
+   QA:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: QA
@@ -61,7 +61,7 @@ jobs:
 
 
 
-   TASKPROD:
+   PROD:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: DEV
